--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App-body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +10,52 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Vollkorn', serif;
+  padding-top: 10vh;
+  padding-bottom: 20vh;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body h1 {
+  font-family: 'Mea Culpa', cursive;
+  font-weight: 400;
+  font-size: 13vmin;
+  background: rgb(255,222,0);
+  background: linear-gradient(180deg, rgba(255,222,0,1) 0%, rgba(255,112,55,1) 45%, rgba(237,0,0,1) 100%);
+  background-clip: text;
+  color: transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-body h2 {
+  font-family: 'Playball', cursive;
+  font-weight: 400;
+  font-size: 11vmin;
+  color: #ffe3ad;
+}
+
+.App-body h3 {
+  font-size: 7vmin;
+}
+
+.nieve {
+  background: rgb(0,8,70);
+  background: linear-gradient(180deg, rgb(0, 4, 36) 0%, rgb(0, 4, 36) 60%, rgb(66, 24, 0) 100%);
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+}
+
+.platos {
+  text-align: left;
+  padding: 0 10vw;
+  min-width: 80vw;
+}
+
+.platos>div {
+  margin-bottom: 5vh;
+}
+
+.ingredientes {
+  color: lightgray;
+  font-size: calc(8px + 2vmin);
 }
